--- a/pagina_senha.html
+++ b/pagina_senha.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadeado com Senha</title>
+    <!-- Adicionando FontAwesome para usar ícones de setas -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             display: flex;
@@ -31,32 +33,30 @@
             transition: transform 0.2s ease-in-out;
         }
 
-        .number-container {
+        .password-input {
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
         }
 
-        .number {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 0 10px;
-        }
-
-        .number button {
-            width: 30px;
-            height: 30px;
-            font-size: 20px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .number span {
+        .password-input input {
+            width: 40px;
+            height: 40px;
+            text-align: center;
             font-size: 24px;
-            margin: 10px 0;
+            margin: 0 5px;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        .arrow-btn {
+            font-size: 20px;
+            margin: 0 10px;
+            cursor: pointer;
         }
 
         .message {
@@ -99,28 +99,21 @@
 <h1>Olá Felipe, digite a senha</h1>
 <div class="lock-container">
     <img id="lockImage" class="lock-image" src="https://i.postimg.cc/DW2Jgrwr/ei-1734134378903-removebg-preview.png" alt="Cadeado">
-    <div class="number-container">
-        <!-- Rodas para girar os números -->
-        <div class="number">
-            <button onclick="rotateNumber(0, 'up')">↑</button>
-            <span id="digit1">0</span>
-            <button onclick="rotateNumber(0, 'down')">↓</button>
-        </div>
-        <div class="number">
-            <button onclick="rotateNumber(1, 'up')">↑</button>
-            <span id="digit2">0</span>
-            <button onclick="rotateNumber(1, 'down')">↓</button>
-        </div>
-        <div class="number">
-            <button onclick="rotateNumber(2, 'up')">↑</button>
-            <span id="digit3">0</span>
-            <button onclick="rotateNumber(2, 'down')">↓</button>
-        </div>
-        <div class="number">
-            <button onclick="rotateNumber(3, 'up')">↑</button>
-            <span id="digit4">0</span>
-            <button onclick="rotateNumber(3, 'down')">↓</button>
-        </div>
+    <div class="password-input">
+        <input type="text" maxlength="1" id="digit1" value="0">
+        <input type="text" maxlength="1" id="digit2" value="0">
+        <input type="text" maxlength="1" id="digit3" value="0">
+        <input type="text" maxlength="1" id="digit4" value="0">
+    </div>
+    <div class="button-container">
+        <span class="arrow-btn" id="arrowUp1">&#8593;</span> <!-- Seta para cima -->
+        <span class="arrow-btn" id="arrowDown1">&#8595;</span> <!-- Seta para baixo -->
+        <span class="arrow-btn" id="arrowUp2">&#8593;</span>
+        <span class="arrow-btn" id="arrowDown2">&#8595;</span>
+        <span class="arrow-btn" id="arrowUp3">&#8593;</span>
+        <span class="arrow-btn" id="arrowDown3">&#8595;</span>
+        <span class="arrow-btn" id="arrowUp4">&#8593;</span>
+        <span class="arrow-btn" id="arrowDown4">&#8595;</span>
     </div>
     <button id="confirmButton">Confirmar Senha</button>
     <div id="message" class="message"></div>
@@ -133,22 +126,36 @@
     const lockImage = document.getElementById('lockImage');
     const messageDiv = document.getElementById('message');
     const confirmButton = document.getElementById('confirmButton');
+    const inputs = Array.from(document.querySelectorAll('.password-input input'));
     const victorySound = document.getElementById('victorySound'); // Som de vitória
 
-    let userPassword = [0, 0, 0, 0]; // Senha inicial (todas as posições começam com 0)
-
-    function rotateNumber(index, direction) {
-        if (direction === 'up') {
-            userPassword[index] = (userPassword[index] + 1) % 10; // Incrementa e volta para 0 após 9
-        } else {
-            userPassword[index] = (userPassword[index] - 1 + 10) % 10; // Decrementa e vai para 9 antes de 0
-        }
-
-        // Atualiza a tela com o novo número
-        document.getElementById(`digit${index + 1}`).textContent = userPassword[index];
+    // Função para aumentar o número de um campo
+    function increaseDigit(index) {
+        let currentValue = parseInt(inputs[index].value);
+        currentValue = (currentValue + 1) % 10; // Limita entre 0 e 9
+        inputs[index].value = currentValue;
     }
 
+    // Função para diminuir o número de um campo
+    function decreaseDigit(index) {
+        let currentValue = parseInt(inputs[index].value);
+        currentValue = (currentValue - 1 + 10) % 10; // Limita entre 0 e 9
+        inputs[index].value = currentValue;
+    }
+
+    // Event listeners para as setas
+    document.getElementById('arrowUp1').addEventListener('click', () => increaseDigit(0));
+    document.getElementById('arrowDown1').addEventListener('click', () => decreaseDigit(0));
+    document.getElementById('arrowUp2').addEventListener('click', () => increaseDigit(1));
+    document.getElementById('arrowDown2').addEventListener('click', () => decreaseDigit(1));
+    document.getElementById('arrowUp3').addEventListener('click', () => increaseDigit(2));
+    document.getElementById('arrowDown3').addEventListener('click', () => decreaseDigit(2));
+    document.getElementById('arrowUp4').addEventListener('click', () => increaseDigit(3));
+    document.getElementById('arrowDown4').addEventListener('click', () => decreaseDigit(3));
+
     confirmButton.addEventListener('click', () => {
+        const userPassword = inputs.map(input => parseInt(input.value, 10));
+
         if (JSON.stringify(userPassword) === JSON.stringify(correctPassword)) {
             // Senha correta
             lockImage.style.display = 'none';
@@ -170,18 +177,8 @@
             setTimeout(() => {
                 lockImage.classList.remove('error');
             }, 500);
-
-            // Reseta a senha
-            userPassword = [0, 0, 0, 0];
-            resetPasswordDisplay();
         }
     });
-
-    function resetPasswordDisplay() {
-        userPassword.forEach((num, index) => {
-            document.getElementById(`digit${index + 1}`).textContent = num;
-        });
-    }
 </script>
 
 </body>
