--- a/pagina_senha.html
+++ b/pagina_senha.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadeado com Senha</title>
-    <!-- Adicionando FontAwesome para usar ícones de setas -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             display: flex;
@@ -30,7 +28,7 @@
             width: 150px;
             height: auto;
             margin-bottom: 30px;
-            transition: transform 0.2s ease-in-out;
+            transition: transform 1s ease-in-out; /* Efeito de rotação suave */
         }
 
         .password-input {
@@ -39,24 +37,35 @@
             margin-bottom: 20px;
         }
 
-        .password-input input {
+        .password-input div {
             width: 40px;
             height: 40px;
+            margin: 0 5px;
             text-align: center;
             font-size: 24px;
-            margin: 0 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #ccc;
         }
 
         .button-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 10px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px;
+            margin-bottom: 20px;
         }
 
-        .arrow-btn {
-            font-size: 20px;
-            margin: 0 10px;
+        .button-container button {
+            font-size: 24px;
+            padding: 10px;
             cursor: pointer;
+            background-color: #e0e0e0;
+            border: 1px solid #ccc;
+        }
+
+        .button-container button:hover {
+            background-color: #ccc;
         }
 
         .message {
@@ -92,91 +101,99 @@
         .error {
             animation: shake 0.5s ease-in-out;
         }
+
+        /* Animação de rotação */
+        @keyframes rotateLock {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .rotate {
+            animation: rotateLock 1s ease-in-out forwards;
+        }
     </style>
 </head>
 <body>
 
-<h1>Olá Felipe, digite a senha</h1>
+<h1>Olá Felipe, clique nos números para digitar a senha</h1>
 <div class="lock-container">
     <img id="lockImage" class="lock-image" src="https://i.postimg.cc/DW2Jgrwr/ei-1734134378903-removebg-preview.png" alt="Cadeado">
     <div class="password-input">
-        <input type="text" maxlength="1" id="digit1" value="0">
-        <input type="text" maxlength="1" id="digit2" value="0">
-        <input type="text" maxlength="1" id="digit3" value="0">
-        <input type="text" maxlength="1" id="digit4" value="0">
+        <div id="digit1"></div>
+        <div id="digit2"></div>
+        <div id="digit3"></div>
+        <div id="digit4"></div>
     </div>
     <div class="button-container">
-        <span class="arrow-btn" id="arrowUp1">&#8593;</span> <!-- Seta para cima -->
-        <span class="arrow-btn" id="arrowDown1">&#8595;</span> <!-- Seta para baixo -->
-        <span class="arrow-btn" id="arrowUp2">&#8593;</span>
-        <span class="arrow-btn" id="arrowDown2">&#8595;</span>
-        <span class="arrow-btn" id="arrowUp3">&#8593;</span>
-        <span class="arrow-btn" id="arrowDown3">&#8595;</span>
-        <span class="arrow-btn" id="arrowUp4">&#8593;</span>
-        <span class="arrow-btn" id="arrowDown4">&#8595;</span>
+        <button onclick="setDigit(1)">1</button>
+        <button onclick="setDigit(2)">2</button>
+        <button onclick="setDigit(3)">3</button>
+        <button onclick="setDigit(4)">4</button>
+        <button onclick="setDigit(5)">5</button>
+        <button onclick="setDigit(6)">6</button>
+        <button onclick="setDigit(7)">7</button>
+        <button onclick="setDigit(8)">8</button>
+        <button onclick="setDigit(9)">9</button>
+        <button onclick="setDigit(0)">0</button>
     </div>
     <button id="confirmButton">Confirmar Senha</button>
     <div id="message" class="message"></div>
 </div>
 
-<audio id="victorySound" src="https://www.myinstants.com/media/sounds/success.mp3"></audio>
+<audio id="victorySound" src="https://www.myinstants.com/media/sounds/success.mp3"></audio> <!-- Link do som -->
 
 <script>
     const correctPassword = [5, 2, 2, 5]; // Senha correta: 5225
     const lockImage = document.getElementById('lockImage');
     const messageDiv = document.getElementById('message');
     const confirmButton = document.getElementById('confirmButton');
-    const inputs = Array.from(document.querySelectorAll('.password-input input'));
+    const digits = [document.getElementById('digit1'), document.getElementById('digit2'), document.getElementById('digit3'), document.getElementById('digit4')];
     const victorySound = document.getElementById('victorySound'); // Som de vitória
 
-    // Função para aumentar o número de um campo
-    function increaseDigit(index) {
-        let currentValue = parseInt(inputs[index].value);
-        currentValue = (currentValue + 1) % 10; // Limita entre 0 e 9
-        inputs[index].value = currentValue;
-    }
+    let enteredPassword = [];
 
-    // Função para diminuir o número de um campo
-    function decreaseDigit(index) {
-        let currentValue = parseInt(inputs[index].value);
-        currentValue = (currentValue - 1 + 10) % 10; // Limita entre 0 e 9
-        inputs[index].value = currentValue;
+    function setDigit(digit) {
+        // Encontra o primeiro campo vazio e adiciona o número
+        for (let i = 0; i < digits.length; i++) {
+            if (digits[i].textContent === "") {
+                digits[i].textContent = digit;
+                enteredPassword.push(digit);
+                break;
+            }
+        }
     }
-
-    // Event listeners para as setas
-    document.getElementById('arrowUp1').addEventListener('click', () => increaseDigit(0));
-    document.getElementById('arrowDown1').addEventListener('click', () => decreaseDigit(0));
-    document.getElementById('arrowUp2').addEventListener('click', () => increaseDigit(1));
-    document.getElementById('arrowDown2').addEventListener('click', () => decreaseDigit(1));
-    document.getElementById('arrowUp3').addEventListener('click', () => increaseDigit(2));
-    document.getElementById('arrowDown3').addEventListener('click', () => decreaseDigit(2));
-    document.getElementById('arrowUp4').addEventListener('click', () => increaseDigit(3));
-    document.getElementById('arrowDown4').addEventListener('click', () => decreaseDigit(3));
 
     confirmButton.addEventListener('click', () => {
-        const userPassword = inputs.map(input => parseInt(input.value, 10));
+        if (enteredPassword.length === 4) {
+            const userPassword = enteredPassword;
 
-        if (JSON.stringify(userPassword) === JSON.stringify(correctPassword)) {
-            // Senha correta
-            lockImage.style.display = 'none';
-            messageDiv.textContent = 'Parabéns! Você conseguiu, pode abrir a caixa vermelha!';
-            messageDiv.classList.add('success-message');
-            victorySound.play(); // Reproduz o som de vitória
-        } else {
-            // Senha incorreta
-            messageDiv.textContent = 'Senha incorreta. Tente novamente!';
-            messageDiv.classList.add('error-message');
-            lockImage.classList.add('error');
+            if (JSON.stringify(userPassword) === JSON.stringify(correctPassword)) {
+                // Senha correta
+                lockImage.style.display = 'none';
+                messageDiv.textContent = 'Parabéns! Você conseguiu, pode abrir a caixa vermelha!';
+                messageDiv.classList.add('success-message');
+                victorySound.play(); // Reproduz o som de vitória
+                lockImage.classList.add('rotate'); // Adiciona o efeito de rotação
+            } else {
+                // Senha incorreta
+                messageDiv.textContent = 'Senha incorreta. Tente novamente!';
+                messageDiv.classList.add('error-message');
+                lockImage.classList.add('error');
 
-            // Vibração do celular
-            if (navigator.vibrate) {
-                navigator.vibrate([200, 100, 200]); // Vibração forte
+                // Vibração do celular
+                if (navigator.vibrate) {
+                    navigator.vibrate([200, 100, 200]); // Vibração forte
+                }
+
+                // Remove a classe de erro após a animação
+                setTimeout(() => {
+                    lockImage.classList.remove('error');
+                }, 500);
             }
-
-            // Remove a classe de erro após a animação
-            setTimeout(() => {
-                lockImage.classList.remove('error');
-            }, 500);
         }
     });
 </script>
